--- a/src/transform/transform_client.ipynb
+++ b/src/transform/transform_client.ipynb
@@ -29,14 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
     "from src.insert_client.insert_client import inserir_cliente\n",
-    "import json"
+    "import json\n",
+    "import datetime"
    ]
   },
   {
@@ -48,12 +49,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20241226_111905'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obter a data e hora atual\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "# Formatar a data e hora como 'YYYYMMDD_HHMMSS'\n",
+    "timestamp = now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "source_input = \"../../data/baseTesteIXC_Transform.xlsx\"\n",
-    "source_output = \"../../src/inserted/cliente_insert.xlsx\""
+    "source_output = f\"../../src/inserted/cliente_insert_{timestamp}.xlsx\""
    ]
   },
   {
@@ -246,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +523,7 @@
        "7  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
