--- a/src/transform/insert_client.ipynb
+++ b/src/transform/insert_client.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
-    "from src.insert_client.insert_client import inserir_cliente\n",
+    "from src.insert.insert_client import inserir_cliente\n",
     "import json\n",
     "import datetime"
    ]
