--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
-    "from src.insert_client.insert_client import inserir_cliente\n",
+    "from src.insert.insert_contract import inserir_contrato\n",
     "import json\n",
     "import datetime"
    ]
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20241226_111905'"
+       "'20241226_123525'"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,23 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 OK\n",
+      "b'{\"type\":\"error\",\"message\":\"CPF\\\\/CNPJ obrigat\\\\u00f3rio!<br \\\\/>Preencha Ativo<br \\\\/>Preencha Raz\\\\u00e3o social\\\\/Nome<br \\\\/>Preencha Endere\\\\u00e7o<br \\\\/>Preencha Cidade<br \\\\/>Preencha Bairro<br \\\\/>Preencha N\\\\u00famero<br \\\\/>Preencha CEP<br \\\\/>Preencha Tipo pessoa<br \\\\/>Preencha Tipo de assinante<br \\\\/>Preencha Classifica\\\\u00e7\\\\u00e3o de ISS<br \\\\/>Preencha Contribuinte ICMS<br \\\\/>Preencha Tipo de localidade\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"27\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# inserir_cliente(\n",
-    "#     razao=\"Cliente de Teste 2\",\n",
-    "#     cnpj_cpf=\"52.459.301/0001-81\",\n",
-    "#     cep=\"57160-000\",\n",
-    "#     endereco=\"Rua ABC\",\n",
-    "#     numero=\"123\",\n",
-    "#     bairro=\"Bairro XPTO\",\n",
-    "#     filial_id=\"35\",\n",
-    "#     cidade=\"1659\",\n",
-    "#     uf=\"AL\",\n",
-    "#     telefone_celular=\"82999999999\",\n",
-    "#     email=\"teste@example.com\",\n",
-    "# )"
+    "inserir_contrato(\n",
+    "    # tipo=\"I\",\n",
+    "    id_cliente=\"117641\",\n",
+    "    id_vd_contrato=\"6824\",  # Plano do contrato\n",
+    "    id_tipo_contrato=\"\",  # Id tipo de cobrança\n",
+    "    id_modelo=\"179\",  # Id modelo do contrato\n",
+    "    id_filial=\"35\",\n",
+    "    id_vendedor=\"1\"\n",
+    ")"
    ]
   },
   {
