--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ambiente: test\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
@@ -49,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20241226_123525'"
+       "'20241226_123752'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"error\",\"message\":\"CPF\\\\/CNPJ obrigat\\\\u00f3rio!<br \\\\/>Preencha Ativo<br \\\\/>Preencha Raz\\\\u00e3o social\\\\/Nome<br \\\\/>Preencha Endere\\\\u00e7o<br \\\\/>Preencha Cidade<br \\\\/>Preencha Bairro<br \\\\/>Preencha N\\\\u00famero<br \\\\/>Preencha CEP<br \\\\/>Preencha Tipo pessoa<br \\\\/>Preencha Tipo de assinante<br \\\\/>Preencha Classifica\\\\u00e7\\\\u00e3o de ISS<br \\\\/>Preencha Contribuinte ICMS<br \\\\/>Preencha Tipo de localidade\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"27\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
+      "b'{\"type\":\"error\",\"message\":\"Preencha Data base financeiro<br \\\\/>Preencha Bloqueio autom\\\\u00e1tico.<br \\\\/>Preencha Descri\\\\u00e7\\\\u00e3o<br \\\\/>Preencha Tipo de cobran\\\\u00e7a<br \\\\/>Preencha Aviso autom\\\\u00e1tico<br \\\\/>Preencha Carteira de cobran\\\\u00e7a<br \\\\/>Preencha Regime cont\\\\u00e1bil - CRE<br \\\\/>Preencha Tipo documento fatura<br \\\\/>Preencha Tipo de envio de cobran\\\\u00e7a<br \\\\/>Preencha Gera financeiro autom\\\\u00e1tico<br \\\\/>Preencha Base gera\\\\u00e7\\\\u00e3o por tipo de documento\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117641\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"\"}]}'\n"
      ]
     },
     {
@@ -144,7 +152,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +165,8 @@
     "    id_tipo_contrato=\"\",  # Id tipo de cobrança\n",
     "    id_modelo=\"179\",  # Id modelo do contrato\n",
     "    id_filial=\"35\",\n",
-    "    id_vendedor=\"1\"\n",
+    "    id_vendedor=\"1\",\n",
+    "    data_base_financeiro=\"2024-04-01\"\n",
     ")"
    ]
   },
