--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ambiente: test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
@@ -143,7 +135,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"error\",\"message\":\"Preencha Data base financeiro<br \\\\/>Preencha Bloqueio autom\\\\u00e1tico.<br \\\\/>Preencha Descri\\\\u00e7\\\\u00e3o<br \\\\/>Preencha Tipo de cobran\\\\u00e7a<br \\\\/>Preencha Aviso autom\\\\u00e1tico<br \\\\/>Preencha Carteira de cobran\\\\u00e7a<br \\\\/>Preencha Regime cont\\\\u00e1bil - CRE<br \\\\/>Preencha Tipo documento fatura<br \\\\/>Preencha Tipo de envio de cobran\\\\u00e7a<br \\\\/>Preencha Gera financeiro autom\\\\u00e1tico<br \\\\/>Preencha Base gera\\\\u00e7\\\\u00e3o por tipo de documento\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117641\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"\"}]}'\n"
+      "b'{\"type\":\"error\",\"message\":\"Preencha Descri\\\\u00e7\\\\u00e3o<br \\\\/>Preencha Tipo de cobran\\\\u00e7a<br \\\\/>Preencha Aviso autom\\\\u00e1tico<br \\\\/>Preencha Carteira de cobran\\\\u00e7a<br \\\\/>Preencha Regime cont\\\\u00e1bil - CRE<br \\\\/>Preencha Tipo documento fatura<br \\\\/>Preencha Tipo de envio de cobran\\\\u00e7a<br \\\\/>Preencha Gera financeiro autom\\\\u00e1tico<br \\\\/>Preencha Base gera\\\\u00e7\\\\u00e3o por tipo de documento\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117641\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"\"}]}'\n"
      ]
     },
     {
@@ -159,14 +151,14 @@
    ],
    "source": [
     "inserir_contrato(\n",
-    "    # tipo=\"I\",\n",
+    "    #tipo=\"I\",\n",
     "    id_cliente=\"117641\",\n",
     "    id_vd_contrato=\"6824\",  # Plano do contrato\n",
     "    id_tipo_contrato=\"\",  # Id tipo de cobrança\n",
     "    id_modelo=\"179\",  # Id modelo do contrato\n",
     "    id_filial=\"35\",\n",
     "    id_vendedor=\"1\",\n",
-    "    data_base_financeiro=\"2024-04-01\"\n",
+    "    data_base_financeira=\"2024-04-01\"\n",
     ")"
    ]
   },
