--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -29,9 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ambiente: test\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from src.utils import carregar_tabela_excel\n",
@@ -55,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "'20241226_123752'"
+       "'20241226_130917'"
       ]
      },
      "execution_count": 3,
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +143,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"error\",\"message\":\"Preencha Descri\\\\u00e7\\\\u00e3o<br \\\\/>Preencha Tipo de cobran\\\\u00e7a<br \\\\/>Preencha Aviso autom\\\\u00e1tico<br \\\\/>Preencha Carteira de cobran\\\\u00e7a<br \\\\/>Preencha Regime cont\\\\u00e1bil - CRE<br \\\\/>Preencha Tipo documento fatura<br \\\\/>Preencha Tipo de envio de cobran\\\\u00e7a<br \\\\/>Preencha Gera financeiro autom\\\\u00e1tico<br \\\\/>Preencha Base gera\\\\u00e7\\\\u00e3o por tipo de documento\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117641\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"\"}]}'\n"
+      "b'{\"type\":\"error\",\"message\":\"Preencha Cep\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117641\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2024-12-26\"}]}'\n"
      ]
     },
     {
@@ -144,7 +152,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,11 +162,14 @@
     "    #tipo=\"I\",\n",
     "    id_cliente=\"117641\",\n",
     "    id_vd_contrato=\"6824\",  # Plano do contrato\n",
-    "    id_tipo_contrato=\"\",  # Id tipo de cobrança\n",
+    "    id_tipo_contrato=\"5\",  # Id tipo de cobrança\n",
     "    id_modelo=\"179\",  # Id modelo do contrato\n",
     "    id_filial=\"35\",\n",
     "    id_vendedor=\"1\",\n",
-    "    data_base_financeira=\"2024-04-01\"\n",
+    "    data_base_financeira=\"2024-04-01\",\n",
+    "    contrato=\"IMPORTAÇÃO\",\n",
+    "    id_carteira_cobranca=\"67\"\n",
+    "    cep=\"57160-000\"\n",
     ")"
    ]
   },
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,9 +222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Crie uma cópia do DataFrame original para evitar o SettingWithCopyWarning\n",
     "df = df.copy()\n",
