--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -170,6 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## DAQUI PRA BAIXO É A JUSTE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inserção do DF"
    ]
   },
