--- a/src/transform/insert_client.ipynb
+++ b/src/transform/insert_client.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_204116'"
+       "'20250319_210118'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,17 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "source_input = \"../../data/baseTesteIXC_Transform.xlsx\"\n",
-    "source_output = f\"../../src/inserted/cliente_insert_{timestamp}.xlsx\""
+    "# source_output = f\"../../src/inserted/cliente_insert_{timestamp}.xlsx\"\n",
+    "source_output = f\"../../src/inserted/cliente_insert_sucess.xlsx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +214,7 @@
      "output_type": "stream",
      "text": [
       "200 OK\n",
-      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117692\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"19\\\\/03\\\\/2025\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919702\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"117693\",\"atualiza_campos\":[{\"tipo\":\"r\",\"campo\":\"ativo\",\"valor\":\"S\"},{\"tipo\":\"i\",\"campo\":\"data_cadastro\",\"valor\":\"19\\\\/03\\\\/2025\"},{\"tipo\":\"i\",\"campo\":\"filial_id\",\"valor\":\"35\"},{\"tipo\":\"i\",\"campo\":\"latitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"longitude\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"id_conta\",\"valor\":\"919704\"},{\"tipo\":\"d\",\"campo\":\"crm_data_vencemos\",\"valor\":\"\"},{\"tipo\":\"r\",\"campo\":\"convert_cliente_forn\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"crm_data_perdemos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_viabilidade\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sem_porta_disponivel\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_abortamos\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_negociando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_apresentando\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_sondagem\",\"valor\":\"\"},{\"tipo\":\"i\",\"campo\":\"crm_data_novo\",\"valor\":\"\"}]}'\n"
      ]
     }
    ],
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
        "      <td>0</td>\n",
        "      <td>Centro</td>\n",
        "      <td>57830-000</td>\n",
-       "      <td>117692</td>\n",
+       "      <td>117693</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -372,13 +373,13 @@
        "0  Isento        35     1659  Vila São Sebastião  Próximo ao cacimbão      0   \n",
        "\n",
        "   Bairro        Cep idClienteIXC statusInsercao  \\\n",
-       "0  Centro  57830-000       117692        sucesso   \n",
+       "0  Centro  57830-000       117693        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
