--- a/src/transform/transform_data.ipynb
+++ b/src/transform/transform_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +147,13 @@
     "    digits = re.findall(r\"\\d+\", texto)\n",
     "\n",
     "    if len(digits) > 0:\n",
-    "        # Se encontrar dígitos, junta tudo numa única string\n",
-    "        return \"\".join(digits)\n",
+    "        # Junta todos os dígitos encontrados numa única string\n",
+    "        numero = \"\".join(digits)\n",
+    "        # Se o número for zero (ou seja, \"0\", \"00\", etc.), retorna \"SN\"\n",
+    "        if int(numero) == 0:\n",
+    "            return \"SN\"\n",
+    "        else:\n",
+    "            return numero\n",
     "    else:\n",
     "        # Se não houver dígitos, retorna \"SN\"\n",
     "        return \"SN\"\n",
@@ -166,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
