update insert_client function to include idx parameter and adjust related notebook cells

--- a/src/transform/insert_client.ipynb
+++ b/src/transform/insert_client.ipynb
@@ -105,12 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lista das colunas que fazem sentido enviar para a API\n",
     "colunas_para_api = [\n",
+    "    'id',\n",
     "    'razaoSocial',\n",
     "    'Email',\n",
     "    'Celular',\n",
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +242,7 @@
     "    numero = row[\"Numero\"]\n",
     "    bairro = row[\"Bairro\"]\n",
     "    cep = row[\"Cep\"]\n",
+    "    idx = row[\"id\"]\n",
     "    \n",
     "    # Chamamos a função inserir_cliente:\n",
     "    response = inserir_cliente(\n",
@@ -256,6 +258,7 @@
     "        telefone_celular=celular,\n",
     "        email=email,\n",
     "        ie_identidade=rg_ie,\n",
+    "        idx=idx\n",
     "        # Se você quiser passar outros campos com valores-padrão, inclua aqui\n",
     "        # Ex.: uf=\"AL\" etc.\n",
     "    )\n",
