--- a/src/transform/insert_contract.ipynb
+++ b/src/transform/insert_contract.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20250319_213142'"
+       "'20250319_213911'"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "0  teste1@radios.com  peixoto       117693  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "0  57830-000       6824              25  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,14 +445,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "inserir_contrato() got an unexpected keyword argument 'isentar_contrato'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[201]\u001b[39m\u001b[32m, line 33\u001b[39m\n\u001b[32m     30\u001b[39m isentar_contrato = \u001b[33m\"\u001b[39m\u001b[33mS\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# Chamamos a função inserir_contrato com os parâmetros mapeados:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m response = \u001b[43minserir_contrato\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtipo\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtipo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_cliente\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_vd_contrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_vd_contrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_tipo_contrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_tipo_contrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     38\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_modelo\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_modelo\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     39\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_filial\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_filial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     40\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_vendedor\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_vendedor\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     41\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdata_base_financeira\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata_base_financeira\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     42\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcontrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcontrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     43\u001b[39m \u001b[43m    \u001b[49m\u001b[43mid_carteira_cobranca\u001b[49m\u001b[43m=\u001b[49m\u001b[43mid_carteira_cobranca\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     44\u001b[39m \u001b[43m    \u001b[49m\u001b[43misentar_contrato\u001b[49m\u001b[43m=\u001b[49m\u001b[43misentar_contrato\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     45\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcep\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcep\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     46\u001b[39m \u001b[43m    \u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m=\u001b[49m\u001b[43mendereco\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     47\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnumero\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     48\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbairro\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcidade\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     50\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     52\u001b[39m status_code = response.status_code\n\u001b[32m     53\u001b[39m content = response.content  \u001b[38;5;66;03m# bytes\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: inserir_contrato() got an unexpected keyword argument 'isentar_contrato'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 OK\n",
+      "b'{\"type\":\"success\",\"message\":\"Registro inserido com sucesso!\",\"id\":\"154043\",\"atualiza_campos\":[{\"tipo\":\"i\",\"campo\":\"data_desistencia\",\"valor\":\"\"},{\"tipo\":\"s\",\"campo\":\"status\",\"valor\":\"P\"},{\"tipo\":\"i\",\"campo\":\"id_cliente\",\"valor\":\"117693\"},{\"tipo\":\"i\",\"campo\":\"data_ativacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_renovacao\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_avisar_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"nao_bloquear_ate\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cancelamento\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"dt_ult_bloq_manual\",\"valor\":\"\"},{\"tipo\":\"d\",\"campo\":\"data_cadastro_sistema\",\"valor\":\"2025-03-19\"}]}'\n"
      ]
     }
    ],
@@ -484,7 +481,7 @@
     "    id_modelo = \"1\"               # Id modelo do contrato (fixo, conforme o exemplo)\n",
     "    id_vendedor = \"1\"             # Id vendedor (fixo, conforme o exemplo)\n",
     "    data_base_financeira = \"01/01/2024\"  # Data base financeira (pode ser fixo ou calculado conforme sua regra)\n",
-    "    contrato = \"IMPORTAÇÃO\"       # Tipo de contrato (fixo)\n",
+    "    descricao_aux_plano_venda = \"IMPORTAÇÃO\"       # Tipo de contrato (fixo)\n",
     "    id_carteira_cobranca = \"67\"   # Id da carteira de cobrança (fixo)\n",
     "\n",
     "    # Chamamos a função inserir_contrato com os parâmetros mapeados:\n",
@@ -497,7 +494,7 @@
     "        id_filial=id_filial,\n",
     "        id_vendedor=id_vendedor,\n",
     "        data_base_financeira=data_base_financeira,\n",
-    "        contrato=contrato,\n",
+    "        descricao_aux_plano_venda=descricao_aux_plano_venda,\n",
     "        id_carteira_cobranca=id_carteira_cobranca,\n",
     "        cep=cep,\n",
     "        endereco=endereco,\n",
@@ -535,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +591,7 @@
        "      <td>57830-000</td>\n",
        "      <td>6824</td>\n",
        "      <td>25</td>\n",
-       "      <td>154042</td>\n",
+       "      <td>154043</td>\n",
        "      <td>sucesso</td>\n",
        "      <td>{'type': 'success', 'message': 'Registro inser...</td>\n",
        "    </tr>\n",
@@ -607,13 +604,13 @@
        "0       117693        35     1659  Vila São Sebastião     SN  Centro   \n",
        "\n",
        "         Cep idPlanoIXC idVencimentoIXC idContratoIXC statusInsercao  \\\n",
-       "0  57830-000       6824              25        154042        sucesso   \n",
+       "0  57830-000       6824              25        154043        sucesso   \n",
        "\n",
        "                                          logRetorno  \n",
        "0  {'type': 'success', 'message': 'Registro inser...  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
